k8s/network-policies/frontend-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 130.211.0.0/22 # Allow Google Cloud LB Health Checks & Proxy
    - ipBlock:
        cidr: 35.191.0.0/16  # Allow Google Cloud LB Health Checks & Proxy
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          tier: backend # Frontend can ONLY connect to Backend
    ports:
    - protocol: TCP
      port: 8080
